--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Filip Terzić | Portfolio</title>
-            <meta name="keywords" content="filip,filip terzic,terzic,portofolio,programing,web design,web,design,skills,projects,web development,development,web developer">
+            <meta name="keywords" content="filip,filip terzic,terzic,portofolio,programming,web design,web,design,skills,projects,web development,development,web developer">
             <meta name="description" content="Filip Terzić | Portofolio">
             <meta name="author" content="Filip Terzic">
             <link rel="stylesheet" href="style.css"/>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
-            <link rel="icon" href="images/ft-high-resolution-logo-transparent - Copy.ico"
+            <link rel="icon" href="images/ft-high-resolution-logo-transparent - Copy.ico">
         </head>
         <body>
             <header class="header">
