--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <meta name="keywords" content="filip,filip terzic,terzic,portofolio,programming,web design,web,design,skills,projects,web development,development,web developer">
             <meta name="description" content="Filip Terzić | Portofolio">
             <meta name="author" content="Filip Terzic">
-            <link rel="stylesheet" href="style.css"/>
+            <link rel="stylesheet" href="style.css"/> 
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
             <link rel="icon" href="images/ft-high-resolution-logo-transparent - Copy.ico">
         </head>
@@ -48,7 +48,7 @@
                           <div class="info">
                               <p><strong>Ime:</strong> Filip</p>
                               <p><strong>Prezime:</strong> Terzić</p>
-                              <p><strong>Datum rođenja:</strong> 20.8.2004</p>
+                              <p><strong>Datum rođenja:</strong> 20.8.2004.</p>
                               <p><strong>Fakultet:</strong> Visoka ICT</p>
                           </div>
                       </div>
@@ -87,7 +87,7 @@
                         <img src="images/proj1.jpg" alt="Project 1"></img>
                     </div>
                     <div class="project-item">
-                        <a href="#"><img src="images/proj2.jpg" alt="Project 2"></a>
+                        <a href="#"><img src="images/proj3.jpg" alt="Project 2"></a>
                     </div>
                 </div>
             </section>
@@ -115,6 +115,15 @@
         <footer>
             <div class="futer">
                 <p>&copy; 2024 Filip Terzić. All rights reserved.</p>
+                <a href="sitemap.xml" target="_blank" class="sitemap-link">
+                  <i class="fas fa-sitemap"></i>
+                </a>
+                  <a href="responsive.scss" target="_blank" class="responsive-link">
+                    <i class="fab fa-sass"></i>
+                </a>
+                <a href="style.scss" target="_blank" class="responsive-link">
+                  <i class="fab fa-sass"></i>
+                </a>
             </div>
         </footer>
 
