--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     <div class="header-right">
                         <nav class="navigation">
                             <ul>
-                                <li><a href="#">Početna</a></li>
-                                <li><a href="#about">O meni</a></li>
-                                <li><a href="#skills">Veštine</a></li>
-                                <li><a href="#projects">Projekti</a></li>
-                                <li><a href="#contact">Kontakt</a></li>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#about">About me</a></li>
+                                <li><a href="#skills">Skills</a></li>
+                                <li><a href="#projects">Projects</a></li>
+                                <li><a href="#contact">Contact</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -34,11 +34,11 @@
             <div id="home">
                 <h1>Filip Terzić</h1>
                 <p>Web developer</p>
-                <a href="#projects" class="btn1">Pogledajte moje projekte!</a>
-                <a href="#contact" class="btn2">Kontaktirajte me!</a>
+                <a href="#projects" class="btn1">Projects</a>
+                <a href="#contact" class="btn2">Contact me!</a>
             </div>
             <section id="about">
-              <h1>O meni</h1>
+              <h1>s</h1>
               <div class="container2">
                   <div class="about-content">
                       <div class="about-img">
@@ -46,10 +46,10 @@
                       </div>
                       <div class="about-text">
                           <div class="info">
-                              <p><strong>Ime:</strong> Filip</p>
-                              <p><strong>Prezime:</strong> Terzić</p>
-                              <p><strong>Datum rođenja:</strong> 20.8.2004.</p>
-                              <p><strong>Fakultet:</strong> Visoka ICT</p>
+                              <p><strong>Name:</strong> Filip</p>
+                              <p><strong>Surname:</strong> Terzić</p>
+                              <p><strong>Date of birth:</strong> 20.8.2004.</p>
+                              <p><strong>Faculty:</strong> Visoka ICT</p>
                           </div>
                       </div>
                   </div>
@@ -57,7 +57,7 @@
           </section>
               <section id="skills">
                 <div class="container3">
-                  <h1>Veštine</h1>
+                  <h1>Skills</h1>
                   <div class="skill">
                     <i class="fab fa-html5" style="font-size:48px"></i>
                     <div class="skill-bar" style="width: 90%;"></div><p>90%</p>
@@ -76,33 +76,33 @@
                   </div>
                   <div class="skill">
                     <i class="fab fa-python" style="font-size:48px"></i>
-                    <div class="skill-bar" style="width: 60%;"></div><p>60%</p>
+                    <div class="skill-bar" style="width: 20%;"></div><p>20%</p>
                   </div>
                 </div>
               </section>
               <section id="projects">
-                <h1>Projekti</h1>
+                <h1>Projects</h1>
                 <div class="container4">
                     <div class="project-item">
-                        <img src="images/proj1.jpg" alt="Project 1"></img>
+                      <a href="https://cofizz.github.io/web-design/" target="_blank"><img src="images/proj1.jpg" alt="Project 1"></img></a>
                     </div>
                     <div class="project-item">
-                        <a href="#"><img src="images/proj3.jpg" alt="Project 2"></a>
+                        <a href="https://pilatesreformershop.com/" target="_blank"><img src="images/Rile.jpg" alt="Project 2"></a>
                     </div>
                 </div>
             </section>
             <section id="contact">
                 <div class="contact-container">
                   <div class="contact-form">
-                    <h2>Kontaktirajte me!</h2>
-                    <form>
-                      <label for="name">Ime I Prezime:</label>
+                    <h2>Contact me!</h2>
+                    <form action="https://formspree.io/f/xzzgewyj" method="POST">
+                      <label for="name">Name:</label>
                       <input type="text" id="name" name="name" required>
-                      <label for="email">Email:</label>
+                      <label for="email">E-mail:</label>
                       <input type="email" id="email" name="email" required>
-                      <label for="message">Poruka:</label>
+                      <label for="message">Message:</label>
                       <textarea id="message" name="message" rows="4" required></textarea>
-                      <button type="submit">Submit</button>
+                      <button type="submit" formtarget="_blank">Submit</button>
                     </form>
                   </div>
                   <div class="map">
@@ -117,9 +117,6 @@
                 <p>&copy; 2024 Filip Terzić. All rights reserved.</p>
                 <a href="sitemap.xml" target="_blank" class="sitemap-link">
                   <i class="fas fa-sitemap"></i>
-                </a>
-                  <a href="responsive.scss" target="_blank" class="responsive-link">
-                    <i class="fab fa-sass"></i>
                 </a>
                 <a href="style.scss" target="_blank" class="responsive-link">
                   <i class="fab fa-sass"></i>
