--- a/index.html
+++ b/index.html
@@ -114,9 +114,12 @@
 
         <footer>
             <div class="futer">
-                <p>&copy; 2024 Filip Terzić. All rights reserved.</p>
+                <p>&copy; 2025 Filip Terzić. All rights reserved.</p>
                 <a href="sitemap.xml" target="_blank" class="sitemap-link">
                   <i class="fas fa-sitemap"></i>
+                </a>
+                  <a href="https://github.com/cofizz/webpraktikum" target="_blank" class="responsive-link">
+                    <i class="fab fa-github"></i>
                 </a>
                 <a href="style.scss" target="_blank" class="responsive-link">
                   <i class="fab fa-sass"></i>
